#1: ClassifySentence migrated
